# PacMan

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: static.yml
cmake/: create_clangd.cmake  embed.cmake  nuklear.cmake  options.cmake
include/: defines.h  ghosts.h  int_vec2.h  maps.h  nk_util_functions.h  nuklear_default.h  trigger.h  typedefs.h  utils.h
src/: ghosts.c  int_vec2.c  main.c  maps.c  nk_util_functions.c  utils.c
src/wasm-shell/: pre.js  shell.html
